fix: use proper color palette for ANSI #32

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -160,12 +160,12 @@
   <script src="scripts/jquery.js"></script>
   <script src="scripts/moment.js"></script>
   <script src="scripts/localforage.js"></script>
+  <script src="scripts/ansi_up.js"></script>
   <script src="scripts/angular.js"></script>
   <script src="scripts/angular-animate.js"></script>
   <script src="scripts/angular-moment.js"></script>
   <script src="scripts/angular-localForage.js"></script>
   <script src="scripts/angular-rt-popup.js"></script>
-  <script src="scripts/ansi2html.js"></script>
   <script src="scripts/app.js"></script>
 </body>
 </html>
