--- a/webapp/index.html
+++ b/webapp/index.html
@@ -9,6 +9,7 @@
   <link href="css/main.css" rel="stylesheet" type="text/css">
   <link href="css/dark-theme.css" rel="stylesheet" type="text/css">
   <link href="css/light-theme.css" rel="stylesheet" type="text/css">
+  <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro|Roboto+Mono|Inconsolata|Anonymous+Pro|Ubuntu+Mono|Droid+Sans+Mono|Nunito:300' rel='stylesheet' type='text/css'>
 
   <!-- favicon -->
   <link rel="icon" href="images/common/favicon-16x16.png" sizes="16x16">
@@ -133,12 +134,12 @@
 
       <h4>Font family</h4>
       <div class="btn-group six-grid">
-        <button class="btn btn-font-1" ng-class="{ selected: 1 === ctrl.fontFamily }" ng-click="ctrl.setFontFamily(1)"></button>
-        <button class="btn btn-font-2" ng-class="{ selected: 2 === ctrl.fontFamily }" ng-click="ctrl.setFontFamily(2)"></button>
-        <button class="btn btn-font-3" ng-class="{ selected: 3 === ctrl.fontFamily }" ng-click="ctrl.setFontFamily(3)"></button>
-        <button class="btn btn-font-4" ng-class="{ selected: 4 === ctrl.fontFamily }" ng-click="ctrl.setFontFamily(4)"></button>
-        <button class="btn btn-font-5" ng-class="{ selected: 5 === ctrl.fontFamily }" ng-click="ctrl.setFontFamily(5)"></button>
-        <button class="btn btn-font-6" ng-class="{ selected: 6 === ctrl.fontFamily }" ng-click="ctrl.setFontFamily(6)"></button>
+        <button class="btn btn-font-1 font-family-1" ng-class="{ selected: 1 === ctrl.fontFamily }" ng-click="ctrl.setFontFamily(1)">Ag</button>
+        <button class="btn btn-font-2 font-family-2" ng-class="{ selected: 2 === ctrl.fontFamily }" ng-click="ctrl.setFontFamily(2)">Ag</button>
+        <button class="btn btn-font-3 font-family-3" ng-class="{ selected: 3 === ctrl.fontFamily }" ng-click="ctrl.setFontFamily(3)">Ag</button>
+        <button class="btn btn-font-4 font-family-4" ng-class="{ selected: 4 === ctrl.fontFamily }" ng-click="ctrl.setFontFamily(4)">Ag</button>
+        <button class="btn btn-font-5 font-family-5" ng-class="{ selected: 5 === ctrl.fontFamily }" ng-click="ctrl.setFontFamily(5)">Ag</button>
+        <button class="btn btn-font-6 font-family-6" ng-class="{ selected: 6 === ctrl.fontFamily }" ng-click="ctrl.setFontFamily(6)">Ag</button>
       </div>
 
       <h4>Sorting</h4>
