--- a/app/index.html
+++ b/app/index.html
@@ -162,6 +162,7 @@
   <script src="../node_modules/moment/moment.js"></script>
   <script src="../node_modules/localforage/dist/localforage.js"></script>
   <script src="../node_modules/ansi_up/ansi_up.js"></script>
+  <script src="../node_modules/highlight.js/build/highlight.pack.js"></script>
   <script src="../node_modules/angular/angular.js"></script>
   <script src="../node_modules/angular-animate/angular-animate.js"></script>
   <script src="../node_modules/angular-moment/angular-moment.js"></script>
