--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
               ng-repeat="stream in ctrl.streams | filter:ctrl.streamsListFilter | orderBy:''"
               ng-class="{ selected: ctrl.isSelected(stream) }"
               ng-click="ctrl.selectStream(stream)"
-              ng-hide="ctrl.favorites[ctrl.stream]"
+              ng-hide="ctrl.favorites[stream]"
             >
               <a href="#">{{::stream}}</a>
               <i ng-show="stream.unread"></i>
