--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
   <!-- build:css(app) css/bundle.min.css -->
   <link href="css/main.css" rel="stylesheet" type="text/css">
   <!-- endbuild -->
-  <link href='//fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Roboto:400,300,100' rel='stylesheet' type='text/css'>
   <!-- favicon -->
   <link rel="icon" href="images/favicon-16x16.png" sizes="16x16">
   <link rel="icon" href="images/favicon-32x32.png" sizes="32x32">
@@ -18,7 +18,7 @@
   <header>
     <div class="rtail-logo"></div>
 
-    <h1>rTail</h1>
+    <h1>> _ | rtail</h1>
     <h3>Your terminal output in the browser in seconds, using UNIX pipes.</h3>
 
     <div class="browser">
