minor text changes

--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
   </div>
 
   <div class="contributors">
-    <h2>Top contributors</h2>
+    <h2>Contributors</h2>
     <h3>From the community to the community</h3>
 
     <table>
@@ -90,7 +90,7 @@
       <img src="images/sponsors/img-lukibear@2x.png" alt="lukibear, LLC">
     </div>
 
-    <h3>❤ rTail? Consider <a href="mailto:info@rtail.org">sponsor this project</a> to keep it alive and free for the community.</h3>
+    <h3>❤ rTail? Consider <a href="mailto:info@rtail.org">sponsoring this project</a> to keep it alive and free for the community.</h3>
 
     <a class="button" href="mailto:info@lukibear.com">Professional support or ad-hoc is also available.</a>
   </footer>
