fix: updated rtail stream name

--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
     <div>
       <code>
         $ npm install -g rtail<br>
-        $ echo "Hello from the website!" | rtail --id website --host rtail-demo.lukibear.com
+        $ echo "Hello from the website!" | rtail --id rtail.org --host rtail-demo.lukibear.com
         <div class="pbcopy">⌘ + C</div>
       </code>
     </div>
@@ -51,7 +51,7 @@
     <p>Or just start typing to stdin</p>
     <div>
       <code>
-        $ rtail --id website --host rtail-demo.lukibear.com --mute
+        $ rtail --id rtail.org --host rtail-demo.lukibear.com --mute
         <div class="pbcopy">⌘ + C</div>
       </code>
     </div>
