fix: example command

--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
     <div>
       <code>
         $ npm install -g rtail<br>
-        $ echo "Hello from the website!" | rtail --id rtail.org --host rtail-demo.lukibear.com
+        $ echo "Hello from rtail.org demo" | rtail --id rtail.org --host rtail-demo.lukibear.com
         <div class="pbcopy">⌘ + C</div>
       </code>
     </div>
