feat: added sorel as contributor

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>rtail(1) - Your terminal output in the browser in seconds, using UNIX pipes.</title>
+  <title>rtail(1) - Terminal output in the browser in seconds, using UNIX pipes.</title>
   <!-- build:css(app) css/bundle.min.css -->
   <link href="css/main.css" rel="stylesheet" type="text/css">
   <link href="../node_modules/animate.css/animate.css" rel="stylesheet" type="text/css">
@@ -86,6 +86,10 @@
         </tr>
         <tr>
           <td><a href="https://github.com/timriot">Tim Riot</a></td>
+          <td class="contributor-type">(contributor)</td>
+        </tr>
+        <tr>
+          <td><a href="https://dribbble.com/sorelmihai">Sorel Mihai</a></td>
           <td class="contributor-type">(contributor)</td>
         </tr>
       </tbody>
