Styled the sponsors section

--- a/app/index.html
+++ b/app/index.html
@@ -94,14 +94,18 @@
 
   <footer>
     <h2>Sponsors</h2>
+    <h3>❤ rTail? Consider sponsoring this project to keep it alive and free for the community.</h3>
 
     <div class="sponsors-list">
       <img src="images/sponsors/img-lukibear@2x.png" alt="lukibear, LLC">
+      <a href="mailto:info@rtail.org">Sponsor this project</a>
+      <a href="mailto:info@rtail.org">Sponsor this project</a>
+      <a href="mailto:info@rtail.org">Sponsor this project</a>
     </div>
 
-    <h3>❤ rTail? Consider <a href="mailto:info@rtail.org">sponsoring this project</a> to keep it alive and free for the community.</h3>
-
-    <a class="button" href="mailto:info@lukibear.com">Professional support or ad-hoc is also available.</a>
+    <div class="bottom">  
+      <a href="mailto:info@lukibear.com">Professional support or ad-hoc is also available.</a>
+    </div>
   </footer>
 
   <!-- build:js(app) bundle.min.js -->
