feat: new static server

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
       <span class="cursor animated infinite flash">_</span>
       | rtail
     </h1>
-    <h3>Your terminal output in the browser in seconds, using UNIX pipes.</h3>
+    <h3>Terminal output in the browser in seconds, using UNIX pipes.</h3>
 
     <div class="browser">
       <iframe src="https://rtail-demo.lukibear.com"></iframe>
@@ -107,7 +107,7 @@
       <a href="mailto:info@rtail.org">Sponsor this project</a>
     </div>
 
-    <div class="bottom">  
+    <div class="bottom">
       <a href="mailto:info@lukibear.com">Professional support or ad-hoc is also available.</a>
     </div>
   </footer>
