fix: server port

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
 
   <div class="readme">
     <h2>Ready to tail</h2>
-    <h3>Copy/paste the examples below and play with the demo above</h3>
+    <h3>Copy/paste the examples and play with the demo above</h3>
 
     <p>
       Install rtail and start pushing lines to our demo server.<br>
