fix: contrib links and order

--- a/app/index.html
+++ b/app/index.html
@@ -85,11 +85,11 @@
           <td class="contributor-type">(contributor)</td>
         </tr>
         <tr>
-          <td><a href="https://github.com/timriot">Tim Riot</a></td>
+          <td><a href="https://dribbble.com/sorelmihai">Sorel Mihai</a></td>
           <td class="contributor-type">(contributor)</td>
         </tr>
         <tr>
-          <td><a href="https://dribbble.com/sorelmihai">Sorel Mihai</a></td>
+          <td><a href="https://www.linkedin.com/in/timriot">Tim Riot</a></td>
           <td class="contributor-type">(contributor)</td>
         </tr>
       </tbody>
