More copy edits for you!

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>rtail(1) - Terminal output in the browser in seconds, using UNIX pipes.</title>
+  <title>rtail(1) - Terminal output to the browser in seconds, using UNIX pipes.</title>
   <!-- build:css(app) css/bundle.min.css -->
   <link href="css/main.css" rel="stylesheet" type="text/css">
   <link href="../node_modules/animate.css/animate.css" rel="stylesheet" type="text/css">
@@ -24,7 +24,7 @@
       <span class="cursor animated infinite flash">_</span>
       | rtail
     </h1>
-    <h3>Terminal output in the browser in seconds, using UNIX pipes.</h3>
+    <h3>Terminal output to the browser in seconds, using UNIX pipes.</h3>
 
     <div class="browser">
       <iframe src="https://rtail-demo.lukibear.com"></iframe>
@@ -32,12 +32,11 @@
   </header>
 
   <div class="readme">
-    <h2>Ready to tail</h2>
-    <h3>Copy/paste the examples and play with the demo above</h3>
+    <h2>Want to try rTail?</h2>
+    <h3>Add your streams to the live demo.</h3>
 
     <p>
-      Install rtail and start pushing lines to our demo server.<br>
-      You will see them appear right above
+      Install rtail and start streaming to the demo server – see the results above.
     </p>
 
     <div>
@@ -48,7 +47,7 @@
       </code>
     </div>
 
-    <p>Or just start typing to stdin</p>
+    <p>…or just start typing into stdin.</p>
     <div>
       <code>
         $ rtail --id rtail.org --host rtail-demo.lukibear.com --mute
@@ -62,7 +61,7 @@
   <div class="github">
     <div class="github-logo"></div>
     <h2>Pull-Requests welcome</h2>
-    <h3>rTail is open source and free to use. The source code is available on GitHub.</h3>
+    <h3>rTail is open source and completely free to use. The source code is available on GitHub.</h3>
     <a class="btn" href="https://github.com/kilianc/rtail">github.com/kilianc/rtail</a>
   </div>
 
@@ -98,7 +97,7 @@
 
   <footer>
     <h2>Sponsors</h2>
-    <h3>❤ rTail? Consider sponsoring this project to keep it alive and free for the community.</h3>
+    <h3>❤ rTail? Consider sponsoring this project to keep it active and free for the community.</h3>
 
     <div class="sponsors-list">
       <img src="images/sponsors/img-lukibear@2x.png" alt="lukibear, LLC">
@@ -108,7 +107,7 @@
     </div>
 
     <div class="bottom">
-      <a href="mailto:info@lukibear.com">Professional support or ad-hoc is also available.</a>
+      <a href="mailto:info@lukibear.com">Professional or ad-hoc support is also available upon request.</a>
     </div>
   </footer>
 
