feat: updated heading animation and others

--- a/app/index.html
+++ b/app/index.html
@@ -19,10 +19,10 @@
   <header>
     <div class="rtail-logo"></div>
 
-    <h1>>
-      <span class="command"></span>
-      <span class="cursor animated infinite flash">_</span>
-      | rtail
+    <h1>
+      <div>
+          > <span class="command"></span><span class="cursor animated infinite flash">_</span> | rtail
+      </div>
     </h1>
     <h3>Terminal output in the browser in seconds, using UNIX pipes.</h3>
 
