fix: updated footer text

--- a/app/index.html
+++ b/app/index.html
@@ -97,7 +97,7 @@
 
   <footer>
     <h2>Sponsors</h2>
-    <h3>❤ rTail? Consider sponsoring this project to keep it active and free for the community.</h3>
+    <h3>❤ rTail? Sponsor this project to keep it actively maintained and free.</h3>
 
     <div class="sponsors-list">
       <img src="images/sponsors/img-lukibear@2x.png" alt="lukibear, LLC">
