feat: added default text for initial headline

--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 
     <h1>
       <div>
-          > <span class="command"></span><span class="cursor animated infinite flash">_</span> | rtail
+          > <span class="command">node --harmony app.js</span><span class="cursor animated infinite flash">_</span> | rtail
       </div>
     </h1>
     <h3>Terminal output to the browser in seconds, using UNIX pipes.</h3>
