--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta property="og:og:site_name" content="rtail(1)" />
+  <meta property="og:title" content="Terminal output to the browser in seconds, using UNIX pipes." />
+  <meta property="og:description" content="rtail is a command line utility that grabs every line in stdin and broadcasts it over UDP. That's it. Nothing fancy. Nothing complicated. Tail log files, app output, or whatever you wish, using rtail broadcasting to an rtail-server – See multiple streams in the browser, in realtime." />
+  <meta property="og:image" content="http://rtail.org/images/social.png" />
   <title>rtail(1) - Terminal output to the browser in seconds, using UNIX pipes.</title>
   <!-- build:css(app) css/bundle.min.css -->
   <link href="css/main.css" rel="stylesheet" type="text/css">
