feat: new meta description tag

--- a/app/index.html
+++ b/app/index.html
@@ -7,12 +7,13 @@
   <meta property="og:title" content="Terminal output to the browser in seconds, using UNIX pipes." />
   <meta property="og:description" content="rtail is a command line utility that grabs every line in stdin and broadcasts it over UDP. That's it. Nothing fancy. Nothing complicated. Tail log files, app output, or whatever you wish, using rtail broadcasting to an rtail-server – See multiple streams in the browser, in realtime." />
   <meta property="og:image" content="http://rtail.org/images/social.png" />
+  <meta name="Description" content="rtail is a command line utility that grabs every line in stdin and broadcasts it over UDP. That's it. Nothing fancy. Nothing complicated. Tail log files, app output, or whatever you wish, using rtail broadcasting to an rtail-server – See multiple streams in the browser, in realtime.">
   <title>rtail(1) - Terminal output to the browser in seconds, using UNIX pipes.</title>
   <!-- build:css(app) css/bundle.min.css -->
-  <link href="css/main.css" rel="stylesheet" type="text/css">
-  <link href="../node_modules/animate.css/animate.css" rel="stylesheet" type="text/css">
+  <link href="css/main.css" rel="stylesheet">
+  <link href="../node_modules/animate.css/animate.css" rel="stylesheet">
   <!-- endbuild -->
-  <link href='//fonts.googleapis.com/css?family=Roboto:400,300,100' rel='stylesheet' type='text/css'>
+  <link href="//fonts.googleapis.com/css?family=Roboto:400,300,100" rel="stylesheet">
   <!-- favicon -->
   <link rel="icon" href="images/favicon-16x16.png" sizes="16x16">
   <link rel="icon" href="images/favicon-32x32.png" sizes="32x32">
