feat: updated iframe url for deep linking

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
     <h3>Terminal output to the browser in seconds, using UNIX pipes.</h3>
 
     <div class="browser">
-      <iframe src="https://rtail-demo.lukibear.com"></iframe>
+      <iframe src="https://rtail-demo.lukibear.com/#/streams/rtail.org"></iframe>
     </div>
   </header>
 
